--- a/base/templates/base/home.html
+++ b/base/templates/base/home.html
@@ -2,13 +2,9 @@
 
 {% block content %}
 <div class="container">
-  <h1 class="fw-bold text-secondary mt-5 text-center">Home Template</h1>
 
-  <div class="row ">
+  <div class="row mt-4">
     <div class="col-2">
-      <!-- <div class="">
-        <a class="btn btn-outline-success" href="{% url 'create-room' %}">Create room</a>
-      </div> -->
       <h4 class="fw-bold">Topics</h4>
       <div class="border-top py-2">
         <a class="text-decoration-none fs-5 text-black" href="{% url 'home' %}">All</a>
@@ -21,11 +17,19 @@
     </div>
 
     <div class="col-10">
+      <div class="d-flex justify-content-between align-items-center">
+        <h4 class="fw-bold text-secondary ">Rooms</h4>
+        <div>
+          {% if request.user.is_authenticated %}
+          <a class="btn btn-outline-success" href="{% url 'create-room' %}">Create room</a>
+          {% endif %}
+        </div>
+      </div>
       {% for room in rooms %}
       <div class="">
         <div class="mt-2">
           <span>@{{room.host.username}}</span>
-          <h4>{{room.id}}) <a href="{% url 'room' room.id %}">{{room.name}}</a></h4>
+          <h4> <a href="{% url 'room' room.id %}">{{room.name}}</a></h4>
           <p class="fw-bold">{{room.topic}}</p>
           <span class="fs-6">{{room.description}}</span>
         </div>
